syntax = "proto3";
package terrarium.module.services;

import "pb/terrarium/module/module.proto";

option go_package = "github.com/terrariumcloud/terrarium/internal/module/services";

service VersionManager {
  rpc BeginVersion(terrarium.module.BeginVersionRequest) returns (terrarium.module.Response);
  rpc AbortVersion(TerminateVersionRequest) returns (terrarium.module.Response);
  rpc PublishVersion(TerminateVersionRequest) returns (terrarium.module.Response);
  rpc ListModuleVersions(ListModuleVersionsRequest) returns (ListModuleVersionsResponse);
}

message TerminateVersionRequest {
    terrarium.module.Module module = 1;
}

message ListModuleVersionsRequest {
  string module = 1;
}

message ListModuleVersionsResponse {
  repeated string versions = 1;
}
